# django-template

./: .flake8  .gitignore  LICENCE  README.md  asgi.py  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  local.env  pyproject.toml  urls.py
docker/: Dockerfile  entrypoint.sh
settings/: base.py  dev.py  local.py
static/: staticfiles.json
