[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["person"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.6"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
gunicorn = "^21.2.0"
django-db-prefix = "^1.0.5"
django-redis = "^5.4.0"
django-cors-headers = "^4.3.0"
drf-spectacular = "^0.26.5"
djangorestframework-simplejwt = "^5.3.0"
requests = "^2.31.0"
pydantic = "^2.4.2"
pytest = "^7.4.3"
pytest-django = "^4.5.2"
whitenoise = "^6.6.0"
#Pillow = "^10.1.0"
#django-celery-beat = "^2.5.0"
#django-celery-results = "^2.5.1"
#django-storages = { extras = ["s3"], version = "^1.14.2" }

[tool.poetry.dev-dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings.local"
python_files = ["tests.py", "test_*.py", "*_test.py", "testing/python/*.py"]
